--- a/src/main/resources/templates/front/swift/entityPickerView.mustache
+++ b/src/main/resources/templates/front/swift/entityPickerView.mustache
@@ -1,3 +1,4 @@
+{{^isChat}}
 import SwiftUI
 import SwiftData
 
@@ -83,3 +84,5 @@ struct {{entity}}PickerView: View {
         }
     }
 }
+
+{{/isChat}}
