--- a/src/main/resources/templates/front/swift/entityListView.mustache
+++ b/src/main/resources/templates/front/swift/entityListView.mustache
@@ -35,13 +35,16 @@ private let calendar = Calendar.current
 @State private var searchCriteria: {{entity}}SearchCriteria = .messages
 @State private var inputText: String = ""
 
+@StateObject private var transactionViewModel: TransactionListViewModel
+@State private var scrollTrigger = UUID()
+
 {{/isChat}}
 @State private var selectedMonth: Date = Date()
 
 {{#header}}
 @AppStorage("lastUsed{{headerUpperCase}}Id") private var lastUsed{{headerUpperCase}}Id: String?
 {{/header}}
-
+@AppStorage("autoSave{{entity}}") private var autoSave: Bool = {{isAutoSave}}
 
 init(modelContext: ModelContext, user: User) {
     self.user = user
@@ -52,6 +55,9 @@ init(modelContext: ModelContext, user: User) {
     {{#hasCategory}}
     _categoryViewModel = StateObject(wrappedValue: CategoryListViewModel(modelContext: modelContext, user: user))
     {{/hasCategory}}
+    {{#isChat}}
+    _transactionViewModel = StateObject(wrappedValue: TransactionListViewModel(modelContext: modelContext, user: user))
+     {{/isChat}}
 }
 
 private func startOfMonth(_ date: Date) -> Date {
@@ -83,27 +89,6 @@ var body: some View {
 
              HStack {
 
-                    Button {
-
-                        Task {
-                            isSyncing = true
-                            {{#header}}
-                            await {{headerLowerCase}}ViewModel.sync()
-                            {{/header}}
-                            {{#hasCategory}}
-                            await categoryViewModel.sync()
-                            {{/hasCategory}}
-                            await viewModel.sync()
-                            isSyncing = false
-                        }
-                    } label: {
-                        Image(systemName: "arrow.triangle.2.circlepath")
-                            .font(.title2)
-                            .foregroundColor(.accentColor)
-                    }
-                    .padding(.leading)
-
-
                     if !searchText.isEmpty {
                         Button {
                             searchText = ""
@@ -129,6 +114,27 @@ var body: some View {
 
                     Spacer()
 
+                     Button {
+
+                        Task {
+                            isSyncing = true
+                            {{#header}}
+                            await {{headerLowerCase}}ViewModel.sync()
+                            {{/header}}
+{{#hasCategory}}
+                            await categoryViewModel.sync()
+                            {{/hasCategory}}
+                            await viewModel.sync()
+                            isSyncing = false
+                        }
+                    } label: {
+                        Image(systemName: "arrow.triangle.2.circlepath")
+                            .font(.title2)
+                            .foregroundColor(.accentColor)
+                    }
+                    .padding(.leading)
+
+{{^isChat}}
                     Button {
                         showForm = true
                     } label: {
@@ -137,6 +143,7 @@ var body: some View {
                             .foregroundColor(.accentColor)
                     }
                     .padding(.trailing)
+                    {{/isChat}}
                 }
                 .padding(.vertical, 4)
                 .background(Color(.systemGroupedBackground))
@@ -156,6 +163,7 @@ var body: some View {
                     onDuplicate: { item in selectedForDuplicate = .init(item) },
                     onEdit: { item in selected = item; showForm = true }
                 )
+
             }
 {{/isChat}}
             {{#isChat}}
@@ -169,9 +177,12 @@ var body: some View {
                         onLoadMore: viewModel.loadMore{{entity}}sIfNeeded,
                         onDuplicate: { item in selectedForDuplicate = .init(item) },
                         onEdit: { item in selected = item; showForm = true }
-                    ).onChange(of: sorted{{entity}}s.count) { _ in
-                            scrollToBottom(proxy: proxy)
-                    }
+                    )
+                     .environmentObject(transactionViewModel)
+                     .environmentObject(accountViewModel)
+                    .onChange(of: scrollTrigger) { _ in
+                         scrollToBottom(proxy: proxy)
+                     }
                     .onAppear {
                     viewModel.fetchEntities()
                         DispatchQueue.main.asyncAfter(deadline: .now() + 0.3) {
@@ -303,10 +314,12 @@ var body: some View {
             viewModel.current{{headerUpperCase}} = acct
             lastUsed{{headerUpperCase}}Id = acct?.id
 
+            transactionViewModel.currentAccount = acct
+
             viewModel.fetchEntities()
 
         }{{/header}}
-        {{^isChat}}
+
         .onAppear {
             viewModel.fetchEntities()
             let start = startOfMonth(selectedMonth)
@@ -341,7 +354,7 @@ var body: some View {
             }
             {{/header}}
         }
-        {{/isChat}}
+
     }
 
 }
@@ -358,15 +371,28 @@ var body: some View {
         let trimmed = inputText.trimmingCharacters(in: .whitespacesAndNewlines)
         guard !trimmed.isEmpty else { return }
 
-        viewModel.createEntity(
+       let toSync =  viewModel.createEntity(
             messages: trimmed,
             responses: "",
             state: "",
+            {{#header}}
+            {{headerLowerCase}}: selected{{headerUpperCase}}?.remoteId,
+            {{headerLowerCase}}LocalId: selected{{headerUpperCase}}?.id,
+            {{/header}}
             updatedAt: Date(),
             reference: UUID().uuidString
         )
+
+        if(autoSave){
+             Task { await viewModel.sync(entity: toSync )}
+        }
+
         viewModel.fetchEntities()
         inputText = ""
+
+         DispatchQueue.main.asyncAfter(deadline: .now() + 0.3) {
+            scrollTrigger = UUID()
+        }
     }
 
     private var sorted{{entity}}s: [{{entity}}] {
@@ -374,11 +400,9 @@ var body: some View {
     }
 
 
-    private func scrollToBottom(proxy: ScrollViewProxy) {
-        if let last = sorted{{entity}}s.last {
-            withAnimation {
-                proxy.scrollTo(last.id, anchor: .bottom)
-            }
+     private func scrollToBottom(proxy: ScrollViewProxy) {
+        withAnimation {
+            proxy.scrollTo("bottom", anchor: .bottom)
         }
     }
     {{/isChat}}
