--- a/src/main/resources/templates/front/swift/views/emptyStateView.mustache
+++ b/src/main/resources/templates/front/swift/views/emptyStateView.mustache
@@ -13,10 +13,12 @@ struct {{entity}}EmptyStateView: View {
             Text(t("Aucune '{{entity}}' pour le moment."))
                 .font(.headline)
                 .foregroundColor(.secondary)
+                {{^isChat}}
             Button(t("Ajouter '{{entity}}' ")) {
                 onAdd()
             }
             .buttonStyle(.borderedProminent)
+            {{/isChat}}
         }
         .frame(maxWidth: .infinity, maxHeight: .infinity)
     }
