--- a/src/main/resources/templates/front/swift/views/listContentView.mustache
+++ b/src/main/resources/templates/front/swift/views/listContentView.mustache
@@ -58,6 +58,9 @@ struct {{entity}}ListContentView: View {
 
                         Divider()
                     }
+                    Color.clear
+                        .frame(height: 1)
+                        .id("bottom")
                 }
                 .padding(.horizontal)
             }
