--- a/src/main/resources/templates/front/swift/entityPagedResponse.mustache
+++ b/src/main/resources/templates/front/swift/entityPagedResponse.mustache
@@ -14,4 +14,6 @@ struct Remote{{entity}}: Decodable {
 	let {{name}}: String?
 {{/isManyToOne}}
 {{/fields}}
+let createdBy: String?
+let tenant: String?
 }
