--- a/src/main/resources/templates/front/swift/model.mustache
+++ b/src/main/resources/templates/front/swift/model.mustache
@@ -19,6 +19,10 @@ final class {{entity}} {
     {{/fields}}
 
     var user: User?
+
+    var createdBy: String?
+    var tenant: String?
+
     var statusRaw: String
     var order: Int
     var deletedAt: Date?
